--- a/Carethy/res/layout/activity_main.xml
+++ b/Carethy/res/layout/activity_main.xml
@@ -2,24 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Spinner
-	    android:id="@+id/tracked_item_spinner"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content" />
-	
-	<Button
-	    android:layout_below="@+id/tracked_item_spinner"
-	    android:id="@+id/display_button"
-        android:layout_centerInParent="true"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/display_button">
-	</Button>
-	
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:id="@+id/pager"
+    	android:layout_width="match_parent"
+    	android:layout_height="match_parent">
+	</android.support.v4.view.ViewPager>
+
 </RelativeLayout>
