--- a/Carethy/res/layout/activity_display_result.xml
+++ b/Carethy/res/layout/activity_display_result.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-</RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        
+	<LinearLayout
+         android:orientation="vertical"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content">
+         
+                <LinearLayout
+	           		android:orientation="vertical"
+	                android:layout_width="fill_parent"
+	                android:layout_height="250dip"
+	                android:id="@+id/graph" />
+	        
+    </LinearLayout>
+</ScrollView>
