--- a/Carethy/res/values/styles.xml
+++ b/Carethy/res/values/styles.xml
@@ -26,6 +26,7 @@
     <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@color/actionbar_background</item>
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
+       	<item name="android:icon">@drawable/ic_logo</item>
     </style>
 
     <!-- ActionBar title text -->
