restyle login and register. apply sans serif light as default font

--- a/Carethy/res/layout/drawer_list_item.xml
+++ b/Carethy/res/layout/drawer_list_item.xml
@@ -2,38 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@drawable/list_selector">
- 
+    android:background="@drawable/list_selector" >
+
     <ImageView
         android:id="@+id/icon"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:contentDescription="@string/desc_nav_drawer_item_icon"
-        android:src="@drawable/ic_launcher"
-        android:layout_centerVertical="true" />
- 
+        android:src="@drawable/ic_launcher" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/icon"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:paddingRight="40dp"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@drawable/nav_drawer_item_text_color"
-        android:gravity="center_vertical"
-        android:paddingRight="40dp"
-        android:typeface="sans"/>
-     
-    <TextView android:id="@+id/counter"
+        android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/counter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/counter_bg"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
-        android:textColor="@color/nav_drawer_counter_text"/>
- 
+        android:background="@drawable/counter_bg"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/nav_drawer_counter_text" />
+
 </RelativeLayout>
