--- a/Carethy/res/layout/activity_login.xml
+++ b/Carethy/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_action_email"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -53,6 +54,7 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_action_password"
                 android:hint="@string/prompt_password"
                 android:imeActionId="@+id/login"
                 android:imeActionLabel="@string/action_sign_in"
@@ -67,9 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="16dp"
-                android:paddingLeft="32dp"
-                android:paddingRight="32dp"
-                android:text="@string/action_sign_in" />
+                android:background="@drawable/button_shape"
+                android:text="@string/action_sign_in"
+                android:textColor="#FFFFFF" />
 
             <Button
                 android:id="@+id/register_button"
@@ -77,9 +79,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="16dp"
-                android:paddingLeft="32dp"
-                android:paddingRight="32dp"
-                android:text="@string/action_register" />
+                android:background="@drawable/button_shape"
+                android:text="@string/action_register"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
     </ScrollView>
 
