--- a/Carethy/res/layout/activity_register.xml
+++ b/Carethy/res/layout/activity_register.xml
@@ -51,6 +51,24 @@
             android:background="@drawable/button_shape"
             android:text="@string/action_register"
             android:textColor="#FFFFFF" />
+
+        <TextView
+            android:id="@+id/register_notice"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="right"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/action_register_notice" />
+
+        <TextView
+            android:id="@+id/register_terms"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="right"
+            android:gravity="center"
+            android:text="@string/action_register_terms"
+            android:textColor="@color/actionbar_background" />
     </LinearLayout>
 
 </ScrollView>
