add password recovery activity UI

--- a/Carethy/res/layout/activity_login.xml
+++ b/Carethy/res/layout/activity_login.xml
@@ -63,6 +63,16 @@
                 android:maxLines="1"
                 android:singleLine="true" />
 
+            <TextView
+                android:id="@+id/forget_password"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:text="@string/action_forget_password"
+             	android:textColor="@color/actionbar_background" />
+
             <Button
                 android:id="@+id/sign_in_button"
                 android:layout_width="match_parent"
