--- a/Carethy/res/values/strings_activity_login.xml
+++ b/Carethy/res/values/strings_activity_login.xml
@@ -7,6 +7,8 @@
     <string name="prompt_password">Password</string>
     <string name="prompt_password_repeat">Repeat password</string>
     <string name="action_sign_in">Sign in</string>
+    <string name="action_forget_password">Forget password?</string>
+    <string name="action_send_password">Send Password</string>
     <string name="action_register">Register</string>
     <string name="action_register_notice">By signing up, you agree to our</string>
     <string name="action_register_terms">Terms and Conditions</string>
