finish register activity UI

--- a/Carethy/res/values/strings_activity_login.xml
+++ b/Carethy/res/values/strings_activity_login.xml
@@ -3,9 +3,14 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
+    <string name="prompt_first_name">First Name</string>
+    <string name="prompt_last_name">Last Name</string>
+    <string name="prompt_weight">Weight (kg)</string>
+    <string name="prompt_height">Height (cm)</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="prompt_password_repeat">Repeat password</string>
+    <string name="prompt_birthday">Birthday</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_forget_password">Forget password?</string>
     <string name="action_send_password">Send Password</string>
@@ -19,5 +24,7 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_no_match_password">This passwords don\'t match</string>
     <string name="error_field_required">This field is required</string>
+    <string name="radio_male">Male</string>
+    <string name="radio_female">Female</string>
 
 </resources>
