--- a/Carethy/res/layout/activity_login.xml
+++ b/Carethy/res/layout/activity_login.xml
@@ -41,12 +41,11 @@
             android:orientation="vertical" >
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_action_email"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
+                android:hint="@string/prompt_username"
+                android:inputType="textPersonName"
                 android:maxLines="1"
                 android:singleLine="true" />
 
@@ -71,7 +70,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="center"
                 android:text="@string/action_forget_password"
-             	android:textColor="@color/actionbar_background" />
+                android:textColor="@color/actionbar_background" />
 
             <Button
                 android:id="@+id/sign_in_button"
@@ -92,7 +91,18 @@
                 android:background="@drawable/button_shape"
                 android:text="@string/action_register"
                 android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/tmpButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/button_shape"
+                android:text="@string/tempFitbit"
+                android:textColor="#FFFFFF" />
+
         </LinearLayout>
+
     </ScrollView>
 
 </merge>
