implement graphView, you can click refresh button to generate random number and display in home fragment

--- a/Carethy/res/layout/fragment_graph.xml
+++ b/Carethy/res/layout/fragment_graph.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-     
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_centerInParent="true"/>
- 	
-      <Spinner
-	    android:id="@+id/tracked_item_spinner"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content" />
-	
-	<Button
-	    android:layout_below="@+id/tracked_item_spinner"
-	    android:id="@+id/display_button"
-        android:layout_centerInParent="true"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/display_button">
-	</Button>
-	
- 
-</RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        
+	<LinearLayout
+         android:orientation="vertical"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content">
+         
+                <LinearLayout
+	           		android:orientation="vertical"
+	                android:layout_width="fill_parent"
+	                android:layout_height="250dip"
+	                android:id="@+id/graph" />
+	        
+    </LinearLayout>
+</ScrollView>
