add holograph library

--- a/Carethy/res/layout/fragment_graph.xml
+++ b/Carethy/res/layout/fragment_graph.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        
-	<LinearLayout
-         android:orientation="vertical"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content">
-         
-                <LinearLayout
-	           		android:orientation="vertical"
-	                android:layout_width="fill_parent"
-	                android:layout_height="250dip"
-	                android:id="@+id/graph" />
-	        
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/graph"
+            android:layout_width="fill_parent"
+            android:layout_height="250dip"
+            android:orientation="vertical" />
+
+        <com.echo.holographlibrary.LineGraph
+            android:id="@+id/holograph"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
+        <Button
+            android:id="@+id/capture"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
+            android:text="capture" />
     </LinearLayout>
+
 </ScrollView>
