--- a/Carethy/res/layout/fragment_graph.xml
+++ b/Carethy/res/layout/fragment_graph.xml
@@ -16,7 +16,7 @@
 
         <com.echo.holographlibrary.LineGraph
             android:id="@+id/holograph"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="200dp" />
 
         <Button
