--- a/Carethy/res/menu/fragment_graph_actions.xml
+++ b/Carethy/res/menu/fragment_graph_actions.xml
@@ -2,10 +2,10 @@
 
     <!-- Refresh -->
     <item
-        android:id="@+id/action_add"
-        android:icon="@drawable/ic_action_add"
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
         android:showAsAction="ifRoom"
-        android:title="@string/action_add">
+        android:title="@string/action_refresh">
     </item>
 
 </menu>
