--- a/Carethy/res/menu/fragment_medication_actions.xml
+++ b/Carethy/res/menu/fragment_medication_actions.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- Refresh -->
+    <!-- Add -->
     <item
         android:id="@+id/action_add"
         android:icon="@drawable/ic_action_add"
