--- a/Carethy/res/layout/fragment_home.xml
+++ b/Carethy/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     <!-- non-scrolling top pane -->
 
     <LinearLayout
+        android:id="@+id/panel"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dip"
