--- a/Carethy/res/menu/fragment_home_actions.xml
+++ b/Carethy/res/menu/fragment_home_actions.xml
@@ -1,5 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!-- Share -->
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_action_share"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_share">
+    </item>
+    
     <!-- Refresh -->
     <item
         android:id="@+id/action_refresh"
