--- a/Carethy/res/layout/fragment_recommendations.xml
+++ b/Carethy/res/layout/fragment_recommendations.xml
@@ -4,4 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/recommendation1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dip"
+		android:background="@drawable/recommendations_style"
+		android:text="Recommendation 1" />
 </LinearLayout>
