adapter for recomendation object, new ui for home fragment

--- a/Carethy/res/values/styles.xml
+++ b/Carethy/res/values/styles.xml
@@ -64,4 +64,10 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="homePanel">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
 </resources>
