--- a/Carethy/res/layout/fragment_medication.xml
+++ b/Carethy/res/layout/fragment_medication.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/medication_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
