--- a/Carethy/res/layout/fragment_recommendations.xml
+++ b/Carethy/res/layout/fragment_recommendations.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/recommendation1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dip"
         android:background="@drawable/recommendation_bg_style"
