Latest Recommendations on home fragment
Latest Recommendations on home fragment
recommendations not added if same as last recommendation
recommend fragment shows history of recommendations

--- a/Carethy/res/layout/fragment_recommendations.xml
+++ b/Carethy/res/layout/fragment_recommendations.xml
@@ -5,12 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <!--
+         TextView
         android:id="@+id/recommendation1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dip"
         android:background="@drawable/recommendation_bg_style"
-        android:text="" />
+        android:text="" /
+    -->
 
 </LinearLayout>
