--- a/Carethy/res/drawable/recommendation_bg_style.xml
+++ b/Carethy/res/drawable/recommendation_bg_style.xml
@@ -9,8 +9,6 @@
         android:right="10dp"
         android:top="10dp" />
 
-
-
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#838282" />
 
 </shape>
