--- a/Carethy/res/layout/activity_password_recovery.xml
+++ b/Carethy/res/layout/activity_password_recovery.xml
@@ -16,7 +16,7 @@
         android:singleLine="true" />
 
     <Button
-        android:id="@+id/sign_in_button"
+        android:id="@+id/send_password_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
