--- a/Carethy/res/drawable/button_shape.xml
+++ b/Carethy/res/drawable/button_shape.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape 
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke 
-        android:width="1dp" 
-        android:color="#505050"/>
-    <corners 
-        android:radius="7dp" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <padding 
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp"
-        android:bottom="1dp"/>
+    <item android:state_pressed="true"><shape android:shape="rectangle">
+            <corners android:radius="5dip" />
 
-    <solid android:color="@color/button"/>
+            <stroke android:width="1dip" android:color="#505050" />
 
-</shape>
+            <gradient android:angle="-90" android:endColor="#003366" android:startColor="#2c636b" />
+        </shape></item>
+    <item android:state_focused="true"><shape android:shape="rectangle">
+            <corners android:radius="5dip" />
+
+            <stroke android:width="1dip" android:color="#505050" />
+
+            <solid android:color="#003366" />
+        </shape></item>
+    <item><shape android:shape="rectangle">
+            <corners android:radius="5dip" />
+
+            <stroke android:width="1dip" android:color="#505050" />
+
+            <gradient android:angle="-90" android:endColor="#003366" android:startColor="#5E869F" />
+        </shape></item>
+
+</selector>
