--- a/Carethy/res/drawable/home_panel_bg_style.xml
+++ b/Carethy/res/drawable/home_panel_bg_style.xml
@@ -1,7 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="10dp" />
+      
+    <!--  <corners android:radius="10dp" />-->
 
     <padding
         android:bottom="10dp"
