two graphs per graph frament plus stats avg/high/low

--- a/Carethy/res/layout/fragment_graph.xml
+++ b/Carethy/res/layout/fragment_graph.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@android:color/white" >
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -9,11 +10,47 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:id="@+id/graph"
+            android:id="@+id/graph_line"
             android:layout_width="fill_parent"
             android:layout_height="250dip"
             android:background="@android:color/white"
             android:orientation="vertical" />
+
+        <LinearLayout
+            android:id="@+id/graph_bar"
+            android:layout_width="fill_parent"
+            android:layout_height="250dip"
+            android:background="@android:color/white"
+            android:orientation="vertical" />
+
+        <LinearLayout
+            android:id="@+id/stats"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dip"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/stats_avg"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center" />
+
+            <TextView
+                android:id="@+id/stats_high"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center" />
+
+            <TextView
+                android:id="@+id/stats_low"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
