change homeFragment UI. refactor the logic to RecommendationListAdapter

--- a/Carethy/res/layout/rowlayout_recommendation.xml
+++ b/Carethy/res/layout/rowlayout_recommendation.xml
@@ -12,24 +12,25 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher" />
-
-    <TextView
-        android:id="@+id/recommendation_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_toRightOf="@+id/recommendation_level"
-        android:padding="3dip"
-        android:textSize="25sp" />
+        android:src="@drawable/ic_alert" />
 
     <TextView
         android:id="@+id/recommendation_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/recommendation_title"
-        android:layout_below="@+id/recommendation_title"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp" />
+        android:layout_marginLeft="5dip"
+        android:layout_toRightOf="@+id/recommendation_level"
+        android:padding="3dip"
+        android:textSize="25sp" />
+
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_arrow" />
 
 </RelativeLayout>
