--- a/Carethy/res/layout/rowlayout_recommendation.xml
+++ b/Carethy/res/layout/rowlayout_recommendation.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dip" >
+    android:padding="5dip" android:id="@+id/recommendation_row">
 
     <ImageView
         android:id="@+id/recommendation_level"
@@ -22,7 +22,7 @@
         android:layout_marginLeft="5dip"
         android:layout_toRightOf="@+id/recommendation_level"
         android:padding="3dip"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/arrow"
