--- a/Carethy/res/values/styles.xml
+++ b/Carethy/res/values/styles.xml
@@ -77,5 +77,9 @@
 		<item name="android:layout_height">1dp</item>
 		<item name="android:background">?android:attr/listDivider</item>
 	</style>
-    
+	
+	
+	<style name="boldText">
+        <item name="android:textStyle">bold|italic</item>
+    </style>    
 </resources>
