expandableListView for RecommendationFragment. Sorted by date

--- a/Carethy/res/layout/fragment_recommendations.xml
+++ b/Carethy/res/layout/fragment_recommendations.xml
@@ -5,25 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ScrollView
-        android:id="@+id/recoScroll"
-        android:layout_width="fill_parent"
+    <ExpandableListView
+        android:id="@+id/expandableListView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
-        <LinearLayout
-            android:id="@+id/scrollRecoPanel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dip"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:id="@+id/scrollRecoInnerPanel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical" />
-        </LinearLayout>
-    </ScrollView>
+    </ExpandableListView>
 
 </LinearLayout>
