--- a/Carethy/res/layout/rowlayout_recommendation.xml
+++ b/Carethy/res/layout/rowlayout_recommendation.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recommendation_row"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dip" android:id="@+id/recommendation_row">
+    android:padding="5dip" >
 
     <ImageView
         android:id="@+id/recommendation_level"
@@ -21,16 +22,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="5dip"
         android:layout_toRightOf="@+id/recommendation_level"
+        android:drawableRight="@drawable/ic_arrow"
         android:padding="3dip"
-        android:textSize="15sp" />
-
-    <ImageView
-        android:id="@+id/arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_arrow" />
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
