minor changes to popup and alert icons

--- a/Carethy/res/values/color.xml
+++ b/Carethy/res/values/color.xml
@@ -7,6 +7,6 @@
     <color name="nav_drawer_background_pressed">#1aa083</color>
     <color name="nav_drawer_counter_text">#FFFFFF</color>
     <color name="nav_drawer_counter_background">#c1392b</color>
-    <color name="button">#003366</color>
+    <color name="button">#2C3E50</color>
     
 </resources>
