--- a/Carethy/res/layout/fragment_graph.xml
+++ b/Carethy/res/layout/fragment_graph.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        android:id="@+id/summary">
 
         <LinearLayout
             android:id="@+id/graph_line"
@@ -21,7 +22,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dip"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:background="@android:color/white" >
 
             <TextView
                 android:id="@+id/stats_low"
@@ -30,12 +32,22 @@
                 android:layout_weight="1"
                 android:gravity="center" />
 
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:background="@color/button" />
+
             <TextView
                 android:id="@+id/stats_avg"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center" />
+
+         	<View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:background="@color/button" />
 
             <TextView
                 android:id="@+id/stats_high"
